--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,10 @@
     <body>
 
         <h1 th:text="${'Hello ' + message}">Hello world</h1>
+        
+        <a th:href="@{/accounts}">Add a new account</a>
+        <a th:href="@{/login}">Login</a>
+        <a th:href="@{/logout}">Logout</a>
 
 
     </body>
