--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
         <a th:href="@{/accounts}">Add a new account</a>
         <a th:href="@{/login}">Login</a>
         <a th:href="@{/logout}">Logout</a>
-
+        <a th:href="@{/profile}">Profile</a>
 
     </body>
 </html>
