--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,10 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
         <meta charset="UTF-8" />
-        <title>Check your account</title>
+        <title>My profile</title>
     </head>
     <body>
+        <a th:href="@{/login}">Login</a>
+        <a th:href="@{/logout}">Logout</a>
 
+        
         <h2><span th:text="${account.username}">Should be the username here</span></h2>
         
         <table>
@@ -23,19 +26,5 @@
             </tr>
         </table>
 
-        <ol>
-            <li th:each="account : ${accounts}">
-                <span th:text="${account.username}">pam</span>
-            </li>
-        </ol>
-
-        
-        <form method="POST" th:action="@{/accounts}">
-            <input type="text" name="username"/>
-            <input type="text" name="nimi"/>
-            <input type="text" name="urli"/>            
-            <input type="password" name="password"/>
-            <input type="submit" value="Add new account!"/>
-        </form>
     </body>
 </html>
